# stokes-browser

./: .gitignore  Cargo.toml  TRANSITIONS.md  box-sizing-test.html  example.html  flex-basis-test.html  justfile  list-style-test.html  max-width-test.html  opacity-test.html  text-transform-test.html  transition-test.html  vertical-align-test.html  visibility-test.html  white-space-test.html
.github/workflows/: build-artifacts.yml  release.yml  wpt.yml
assets/: 404.html  com.ethanstokes.stokes-browser.desktop
crates/script_bindings/: Cargo.toml  build.rs
crates/script_bindings/compute/: bindings.rs
crates/script_bindings/src/: lib.rs
crates/script_bindings/webidls/: Console.webidl
docs/: wpt-workflow.md
src/: bookmark_context_menu.rs  bookmarks.rs  browser.rs  browser_frame_primitive.rs  browser_iced.rs  convert_events.rs  cosmic_app.rs  default_browser.rs  display_list.rs  dom.rs  events.rs  fragment_tree.rs  html_renderer.rs  input.rs  ipc.rs  main.rs  main_process_render_context.rs  networking.rs  renderer.rs  shader.wgsl  shell_provider.rs  tab_manager.rs  tab_process.rs  ui.rs  vk_context.rs  vk_shared.rs  window.rs  wpt_runner.rs
src/css/: computed.rs  mod.rs  parse.rs  parser.rs  selector.rs  stylesheet.rs  stylo.rs  transition_manager.rs  values.rs
src/css/computed/: applicator.rs  mod.rs  resolver.rs  shorthands.rs  values.rs
src/css/values/: background.rs  border.rs  color.rs  cursor.rs  font.rs  layout.rs  length.rs  list.rs  mod.rs  shadow.rs  stroke.rs  text.rs  transition.rs
src/dom/: attr.rs  config.rs  damage.rs  events.rs  form.rs  layout.rs  mod.rs  node.rs  parser.rs  resolve.rs  resource.rs  selection.rs  snapshot.rs  state.rs  stylo_data.rs  stylo_to_cursor.rs  stylo_to_kurbo.rs  stylo_to_parley.rs  sub_dom.rs  traverse.rs  url.rs  viewport.rs
src/dom/events/: focus.rs  ime.rs  keyboard.rs  mod.rs  pointer.rs
src/engine/: adblock.rs  config.rs  js_message_handler.rs  js_provider.rs  mod.rs  nav_provider.rs  net_provider.rs  resolve.rs  script_executor.rs  script_type.rs
src/js/: console.rs  dom_bindings.rs  element_bindings.rs  fetch.rs  helpers.rs  mod.rs  module_loader.rs  runtime.rs  runtime_context.rs  selectors.rs  timers.rs
src/js/bindings/: abort_signal.rs  alert_callback.rs  console.rs  cookies.rs  crypto.rs  css.rs  custom_elements.rs  document.rs  document_fragment.rs  dom_bindings.rs  dom_implementation.rs  element.rs  element_bindings.rs  event.rs  event_listeners.rs  event_target.rs  fetch.rs  google.rs  history.rs  html_form_element.rs  html_iframe_element.rs  html_image_element.rs  html_input_element.rs  html_svg_element.rs  interface_registry.rs  location.rs  mod.rs  mutation_observer.rs  navigator.rs  node.rs  performance.rs  registry.rs  storage.rs  text_encoding.rs  timers.rs  url.rs  warnings.rs  window.rs  xhr.rs
src/js/jsapi/: define_native_function.rs  error.rs  js_promise.rs  mod.rs  objects.rs  promise.rs
src/layout/: box_model.rs  inline.rs  layout_tree.rs  list.rs  mod.rs  replaced.rs  stylo_style.rs  table.rs  taffy.rs
src/renderer/: background.rs  cache.rs  decorations.rs  dom_renderer.rs  element_renderer.rs  font.rs  form.rs  fragment_renderer.rs  gradient.rs  image.rs  layers.rs  layout.rs  mod.rs  paint.rs  painter.rs  pseudo.rs  shadow.rs  sizing.rs  style.rs  svg.rs  text.rs  webrender_compositor.rs
src/renderer/kurbo_css/: css_box.rs  mod.rs  non_uniform_radii.rs
src/ui/: bookmarks.rs  mod.rs
src/ui/legacy/: browser.rs  input.rs  mod.rs  ui.rs  window.rs
src/ui/libcosmic/: app.rs  context_menus.rs  messages.rs  mod.rs  state.rs
src/ui/libcosmic/views/: bookmarks.rs  browser_frame_primitive.rs  mod.rs  nav.rs  page.rs  settings_menu.rs  tabs.rs
tests/: alert-test.html  append-child-test.html  append-remove-child-test.html  children.html  content-test.html  cookie-test.html  create-comment-test.html  crypto-test.html  cursor-test.html  custom-elements-test.html  document-element-test.html  document-implementation-test.html  dynamic-import-test.html  element-attribute-test.html  event-listener-test.html  event-test.html  example2.html  external-script-test.html  fetch-test.html  flex-test.html  float-test.html  font-test.html  form-element-test.html  gap-test.html  has-child-nodes-test.html  html-input-element-test.html  iframe-test.html  jquery-test.html  location-reload-test.html  matchmedia-test.html  modrinth-test.html  mutation-observer-test.html  node-relations-test.html  overflow-y-test.html  promise-simple-test.html  promise-test.html  settimeout-test.html  shadow-dom-test.html  stroke-test.html  svg-element-test.html  (+5 more)
tests/modules/dynamic-import/: entry.js  nested.js  reject.js  value.js
tools/wpt/: bootstrap.py  diff_results.py  serve-local.json  update_baseline.py
wpt/: README.md
wpt/baselines/: latest.json
wpt/expectations/: known-failures.txt
wpt/manifests/: smoke.txt
