[package]
name = "stokes-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.31.0-beta.2"
winit-core = "0.31.0-beta.2"
ash = "0.38"
ash-window = "0.13"
skia-safe = { version = "0.93.1", features = ["vulkan"] }
image = "0.25.8"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
curl = "0.4"
html5ever = "0.38.0"
usvg = "0.46.0"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
mozjs = "0.15.0"
base64 = "0.22"
stacker = "0.1"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
uds_windows = "1.1.0"
rfd = "0.17.2"
url = "2"
taffy = { git = "https://github.com/DioxusLabs/taffy", rev = "25759dad44d8350743a4e866fee54962f996895a" }
slab = "0.4.12"
markup5ever = "0.38.0"
xml5ever = "0.38.0"
parley = { git = "https://github.com/linebender/parley", rev = "6d0d9c90a7875ceb34f0bb1c2bfbfbe5b5d74856" }
euclid = "0.22.13"
bitflags = { version = "2.11.0", features = ["serde"] }
atomic_refcell = "0.1.13"
skrifa = "0.40.0"
kurbo = "0.13.0"
bytes = "1.11.1"
tracing = "0.1.44"
hashbrown = "0.16.1"
peniko = "0.6.0"
anyrender = "0.7.0"
anyrender_svg = "0.8.0"
color = "0.3.2"
html-escape = "0.2.13"
lazy_static = "1.5.0"
hirofa_utils = "0.7.4"
cursor-icon = { version = "1.2.0", features = ["serde"] }
data-url = "0.3.2"
libc = "0.2.178"
log = "0.4.28"
wuff = "0.2.3"
dirs = "6.0"
keyboard-types = { version = "0.7", features = ["serde"] }
smol_str = { version = "0.3.5",features = ["serde"] }
rustc-hash = "2.1.1"
dioxus-core = "0.7.3"
percent-encoding = "2.3.2"
cssparser = "0.36.0"
ipc-channel = { version = "0.21.0", features = ["async"] }
raw-window-handle = "0.6.2"
webdriver = "0.53.0"

# Stylo
stylo = "0.12.0"
stylo_traits = "0.12.0"
stylo_atoms = "0.12.0"
stylo_config = "0.12.0"
stylo_dom = "0.12.0"
selectors = "0.35.0"

# Blitz
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", rev = "2b3d3ac0" }
blitz-net = { git = "https://github.com/DioxusLabs/blitz", rev = "2b3d3ac0" }
stylo_taffy = { git = "https://github.com/DioxusLabs/blitz", rev = "2b3d3ac0", features = ["floats"] }
dioxus-asset-resolver = { version = "0.7.3", features = ["native"] }


[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }
