[package]
name = "stokes-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.31.0-beta.2"
winit-core = "0.31.0-beta.2"
gl = "0.14.0"
skia-safe = { version = "0.93.1", features = ["gpu", "gl"] }
#skia-safe = { git = "https://github.com/marcpabst/rust-skia", features = ["gpu", "gl", "graphite"] }
image = "0.25.6"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
curl = "0.4"
html5ever = "0.39.0"
usvg = "0.46.0"
resvg = "0.46.0"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
mozjs = { version = "0.15.6", features = ["debugmozjs"] }
base64 = "0.22"
stacker = "0.1"
serde_json = "1.0.149"
shared_memory = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
rfd = "0.17.2"
url = "2"
taffy = { git = "https://github.com/DioxusLabs/taffy", rev = "4b6687da0ca1e9d71da4e48b4c659f5c45060707", features = ["strict_provenance"] }
slab = "0.4.12"
markup5ever = "0.39.0"
xml5ever = "0.39.0"
parley = { git = "https://github.com/linebender/parley", rev = "07980878fc9ea4b16ddc197ac789d01fb8ada7a3" }
euclid = "0.22.13"
bitflags = { version = "2.11.0", features = ["serde"] }
atomic_refcell = "0.1.13"
skrifa = "0.40.0"
kurbo = "0.13.0"
bytes = "1.11.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
hashbrown = "0.16.1"
peniko = "0.6.0"
anyrender = "0.8.0"
anyrender_svg = "0.9.1"
color = "0.3.2"
html-escape = "0.2.13"
lazy_static = "1.5.0"
hirofa_utils = "0.7.4"
cursor-icon = { version = "1.2.0", features = ["serde"] }
data-url = "0.3.2"
libc = "0.2.178"
log = "0.4.28"
wuff = "0.2.3"
dirs = "6.0"
httpdate = "1.0.3"
rusqlite = { version = "0.39.0", features = ["bundled", "fallible_uint"] }
keyring = "3.6.3"
aes-gcm = "0.10.3"
rand = "0.10.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
keyboard-types = { version = "0.7", features = ["serde"] }
smol_str = { version = "0.3.5",features = ["serde"] }
rustc-hash = "2.1.1"
dioxus-core = "0.7.3"
percent-encoding = "2.3.2"
cssparser = "0.36.0"
ipc-channel = { version = "0.21.0", features = ["async"] }
raw-window-handle = "0.6.2"
smallvec = "1.15.1"
adblock = "0.12.1"

# Stylo
stylo = "0.14.0"
stylo_traits = "0.14.0"
stylo_atoms = "0.14.0"
stylo_static_prefs = "0.14.0"
stylo_dom = "0.14.0"
selectors = "0.36.1"

# Blitz
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", rev = "781ae63f" }
stylo_taffy = { git = "https://github.com/DioxusLabs/blitz", rev = "781ae63f", features = ["floats"] }
dioxus-asset-resolver = { version = "0.7.4", features = ["native"] }

[dependencies.glutin-winit]
git = "https://github.com/EthanRStokes/glutin.git"
rev = "48b8f8d"
default-features = true

[dependencies.glutin]
git = "https://github.com/EthanRStokes/glutin.git"
rev = "48b8f8d"
default-features = true

[patch.crates-io]
glutin = { git = "https://github.com/EthanRStokes/glutin.git" }
glutin-winit = { git = "https://github.com/EthanRStokes/glutin.git" }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.10"